[package]
name = "chatroom-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.7"
tokio = { version = "1", features = ["rt" ,"net", "parking_lot", "sync", "macros", "rt-multi-thread", "time"] }
rand = "0.8.5"
serde = { version = "1", features = ["derive", "rc"] }
anyhow = "1.0.86"
futures = "0.3.30"
serde_json = "1.0.120"
tokio-stream = "0.1.15"
